Added Temp Resume on page

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -7,9 +7,10 @@ import ResumeItem from "../layouts/ResumeItem.astro";
 
 ---
 <MainLayout title="Portafolio: Francisco - Resume" activePage= "resume">
-    <h1>Resume</h1>
-    <ResumeItem>
-        <h1 class="text-2xl" slot="title"> Test Title</h1>
-        <p slot="desciption" class="">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab consequuntur facilis quam eos, cupiditate doloribus porro sed assumenda obcaecati dolor veritatis perferendis delectus aperiam. Assumenda eius repellat eveniet debitis in?</p>
-    </ResumeItem>
+    <h1>Resume</h1>A
+    <div class="flex max-w-full justify-center">
+        <div class="bg-white shadow-md border border-gray-200 rounded-lg max-w-xl dark:bg-gray-800 dark:border-gray-700">
+         <img class="rounded-t-lg" src="resume.jpg" alt="">
+        </div>
+    </div>
 </MainLayout>
