--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -42,7 +42,7 @@ if(activePage === "home") {
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="bg-brand-green-bg text-white">   
+	<body class="bg-slate-900 text-white">   
 		<nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900">
 			<div class="container flex flex-wrap items-center justify-end mx-auto">
 			<!-- Hamburger Menu -->
