--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -5,13 +5,17 @@
  */
 const {title, activePage} = Astro.props;
 
-//Setting up the active page for the navigation
+//Pages Styles
 let activeNavCss = 'block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white';
 let navCSS = 'block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent';
+
+//Style ref values for each navigation item
 var homeCSS = '';
 var aboutCSS = '';
 var contactCSS = '';
 var resumeCSS = '';
+
+//Checking which page we are on by checking the incoming prop
 if(activePage === "home") {
 	homeCSS = activeNavCss;
 	aboutCSS = navCSS;
@@ -50,7 +54,7 @@ if(activePage === "home") {
 					<span class="sr-only">Open main menu</span>
 					<svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
 				</button>
-					<!-- -------- -->
+					<!-- ----DEFAULT WEB NAVIGATION---- -->
 				<div class="hidden w-full md:block md:w-auto" id="navbar-default">
 					<ul class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
 					<li>
@@ -67,7 +71,23 @@ if(activePage === "home") {
 					</li>
 					</ul>
 				</div>
-				
+				<!-- ----DEFAULT MOBILE NAVIGATION---- -->
+				<div class="md:hidden transition-transform w-[90%] overflow-hidden scale-y-0 absolute top-10 mx-5" id="navbar-mobile">
+					<ul class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+					<li>
+						<a href="/" class={homeCSS} aria-current="page">Home</a>
+					</li>
+					<li>
+						<a href="/about" class={aboutCSS}>About</a>
+					</li>
+					<li>
+						<a href="/contact" class={contactCSS}>Contact Me</a>
+					</li>
+					<li>
+						<a href="/resume" class={resumeCSS}>Resume</a>
+					</li>
+					</ul>
+				</div>
 			</div>
 		</nav>
 		<!-- END NAVBAR -->
@@ -76,11 +96,13 @@ if(activePage === "home") {
 </html>
 
 <script>
-    //NOTE: Java script in here will get treated like client side code
+	/**
+	 * Hambuergur Menu Logic for Mobile menu
+	 */
 	var navBtn = document.getElementById('nav_btn');
-	var menu = document.getElementById('navbar-default');
-
+	var menu = document.getElementById('navbar-mobile');
 	navBtn.addEventListener('click', () => {
-		menu.classList.toggle('hidden');
+		menu.classList.toggle('scale-y-0');
+		menu.classList.toggle('scale-y-100');
 	});
 </script>
