Index page at a presentable stage

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -7,10 +7,14 @@ import ResumeItem from "../layouts/ResumeItem.astro";
 import resumeImgSrc from "../images/resume.jpg"
 ---
 <MainLayout title="Portafolio: Francisco - Resume" activePage= "resume">
-    <h1 class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">Resume</h1>
+    <h1 class="block w-fit rounded m-2 px-8  sm:w-full text-3xl text-left align-text-bottom bold uppercase text-white-90">
+        Resume
+     </h1>
     <div class="flex max-w-full justify-center">
-        <div class="bg-white shadow-md border border-gray-200 rounded-lg max-w-xl dark:bg-gray-800 dark:border-gray-700">
-         <img class="rounded-t-lg" src={resumeImgSrc} alt="">
+        <div class="bg-white shadow-md border border-gray-200 rounded-lg max-w-xl m-10">
+         <a href={resumeImgSrc}>
+            <img class="rounded-t-lg" src={resumeImgSrc} alt="Resume image">
+         </a>
         </div>
     </div>
 </MainLayout>
