--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -6,8 +6,8 @@
 const {title, activePage} = Astro.props;
 
 //Pages Styles
-let activeNavCss = 'block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white';
-let navCSS = 'block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent';
+let activeNavCss = 'block py-2 pl-3 pr-4 text-black bg-[#3BA576] rounded md:bg-transparent md:text-[#3BA576] md:p-0';
+let navCSS = 'block py-2 pl-3 pr-4 text-white rounded hover:bg-[#3BA576] md:hover:bg-transparent md:border-0 md:hover:text-[#3BA576] md:p-0   dark:hover:bg-[#3BA576]  ';
 
 //Style ref values for each navigation item
 var homeCSS = '';
@@ -15,7 +15,7 @@ var aboutCSS = '';
 var contactCSS = '';
 var resumeCSS = '';
 
-//Checking which page we are on by checking the incoming prop
+//Checking which page we are on by checking the incoming
 if(activePage === "home") {
 	homeCSS = activeNavCss;
 	aboutCSS = navCSS;
@@ -46,8 +46,8 @@ if(activePage === "home") {
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="bg-slate-900 text-white">   
-		<nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900">
+	<body class="bg-[#081710] text-white">   
+		<nav class="bg-[#081710] border-gray-200 px-2 sm:px-4 py-2.5 rounded">
 			<div class="container flex flex-wrap items-center justify-end mx-auto">
 				<!-- Hamburger Menu -->
 				<button id="nav_btn" data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
@@ -56,7 +56,7 @@ if(activePage === "home") {
 				</button>
 					<!-- ----DEFAULT WEB NAVIGATION---- -->
 				<div class="hidden w-full md:block md:w-auto" id="navbar-default">
-					<ul class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+					<ul class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 bg-[#081710]">
 					<li>
 						<a href="/" class={homeCSS} aria-current="page">Home</a>
 					</li>
@@ -73,7 +73,7 @@ if(activePage === "home") {
 				</div>
 				<!-- ----DEFAULT MOBILE NAVIGATION---- -->
 				<div class="md:hidden transition-transform w-[90%] overflow-hidden scale-y-0 absolute top-10 mx-5" id="navbar-mobile">
-					<ul class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+					<ul class="flex flex-col p-4 mt-4 border border-[#3BA576] rounded-lg bg-[#081710] md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white ">
 					<li>
 						<a href="/" class={homeCSS} aria-current="page">Home</a>
 					</li>
