--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ import charMobile from '../images/char_mobile.png'
                 <h1 class="hidden w-full sm:block sm:w-auto my-1 text-5xl align-text-bottom font-extrabold text-gray-90">
                     Francisco Paliouras
                 </h1>
-                <h1 class="col-span-2 hidden w-[50%] mx-auto my-0 sm:block text-3xl align-text-bottom bg-green-500 text-white-90">
+                <h1 class="col-span-2 hidden w-[50%] mx-auto my-0 sm:block text-3xl align-text-bottom bg-green-500 text-white-90 font-semibold">
                     a Web Developer
                  </h1>
             </div>
@@ -35,7 +35,7 @@ import charMobile from '../images/char_mobile.png'
             <h1 class="col-span-2 block w-full mb-0 sm:hidden sm:w-full text-4xl text-left font-extrabold text-gray-90">
                 Francisco Paliouras
             </h1>
-            <h1 class="col-span-2 block w-[70%] px-8 sm:hidden sm:w-full text-3xl text-left align-text-bottom bg-green-500 text-white-90">
+            <h1 class="col-span-2 block w-[70%] px-8 sm:hidden sm:w-full text-3xl text-left align-text-bottom bg-green-500 text-white-90 font-semibold">
                a Web Developer
             </h1>
         </div>
