--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -56,7 +56,7 @@ if(activePage === "home") {
 				</button>
 					<!-- ----DEFAULT WEB NAVIGATION---- -->
 				<div class="hidden w-full md:block md:w-auto" id="navbar-default">
-					<ul class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 bg-[#081710]">
+					<ul class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 bg-[#081710]">
 					<li>
 						<a href="/" class={homeCSS} aria-current="page">Home</a>
 					</li>
@@ -73,7 +73,7 @@ if(activePage === "home") {
 				</div>
 				<!-- ----DEFAULT MOBILE NAVIGATION---- -->
 				<div class="md:hidden transition-transform w-[90%] overflow-hidden scale-y-0 absolute top-10 mx-5" id="navbar-mobile">
-					<ul class="flex flex-col p-4 mt-4 border border-[#3BA576] rounded-lg bg-[#081710] md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white ">
+					<ul class="flex flex-col p-4 mt-4 border border-[#3BA576] rounded-lg bg-[#081710] md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0">
 					<li>
 						<a href="/" class={homeCSS} aria-current="page">Home</a>
 					</li>
