adding contact form

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,18 +44,18 @@ import charMobile from '../images/char_mobile.png'
         <!-- Button Grid - Hero Section -->
         <div class="grid grid-cols-2 gap-x-0 w-fit mx-auto md:ml-[12%]">
             <div class="flex rounded border-2 border-[#3BA576] text-[#3BA576] hover:text-black hover:bg-[#3BA576] overflow-hidden w-fit my-4">
-                <a href="/resume" class="text-sm py-2 px-2 mx-2 font-bold">
+                <a href="/resume" class="group text-sm py-2 px-2 mx-2 font-bold">
                     <p class="inline">Resume</p>
-                    <svg class="animate-bounce w-5 h-5 inline pb-1" aria-hidden="true" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="group-hover:animate-bounce w-5 h-5 inline pb-1" aria-hidden="true" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path clip-rule="evenodd" d="M5.625 1.5H9a3.75 3.75 0 013.75 3.75v1.875c0 1.036.84 1.875 1.875 1.875H16.5a3.75 3.75 0 013.75 3.75v7.875c0 1.035-.84 1.875-1.875 1.875H5.625a1.875 1.875 0 01-1.875-1.875V3.375c0-1.036.84-1.875 1.875-1.875zm5.845 17.03a.75.75 0 001.06 0l3-3a.75.75 0 10-1.06-1.06l-1.72 1.72V12a.75.75 0 00-1.5 0v4.19l-1.72-1.72a.75.75 0 00-1.06 1.06l3 3z" fill-rule="evenodd"></path>
                         <path d="M14.25 5.25a5.23 5.23 0 00-1.279-3.434 9.768 9.768 0 016.963 6.963A5.23 5.23 0 0016.5 7.5h-1.875a.375.375 0 01-.375-.375V5.25z"></path>
                         </svg>
                     </a>
             </div>
             <div class="flex rounded border-2 border-[#3BA576] text-[#3BA576] hover:text-black hover:bg-[#3BA576] overflow-hidden w-fit my-4">
-                <a href="/contact" class="text-sm py-2 px-2 mx-2 font-bold">
+                <a href="/contact" class="group text-sm py-2 px-2 mx-2 font-bold">
                     <p class="inline">Contact Me</p>
-                    <svg class="animate-bounce w-5 h-5 inline pb-1" aria-hidden="true" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="group-hover:animate-bounce w-5 h-5 inline pb-1" aria-hidden="true" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path clip-rule="evenodd" d="M19.5 9.75a.75.75 0 01-.75.75h-4.5a.75.75 0 01-.75-.75v-4.5a.75.75 0 011.5 0v2.69l4.72-4.72a.75.75 0 111.06 1.06L16.06 9h2.69a.75.75 0 01.75.75z" fill-rule="evenodd"></path>
                         <path clip-rule="evenodd" d="M1.5 4.5a3 3 0 013-3h1.372c.86 0 1.61.586 1.819 1.42l1.105 4.423a1.875 1.875 0 01-.694 1.955l-1.293.97c-.135.101-.164.249-.126.352a11.285 11.285 0 006.697 6.697c.103.038.25.009.352-.126l.97-1.293a1.875 1.875 0 011.955-.694l4.423 1.105c.834.209 1.42.959 1.42 1.82V19.5a3 3 0 01-3 3h-2.25C8.552 22.5 1.5 15.448 1.5 6.75V4.5z" fill-rule="evenodd"></path>
                       </svg>
