added loading animation

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -6,7 +6,7 @@
 import ContactForm from "../components/ContactForm.vue"
 ---
 <MainLayout title="Portafolio: Francisco - Contact" activePage= "contact">
-    <section class="bg-[#081710]">
+    <section class="load bg-[#081710]">
         <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-12">
             <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none  md:text-5xl lg:text-6xltext-white">
                Contact Form
@@ -21,3 +21,4 @@ import ContactForm from "../components/ContactForm.vue"
         </div>
     </section>
 </MainLayout>
+
