--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import charMobile from '../images/char_mobile.png'
 //NOTE: JS here is treated like server side pre render
 ---
 <MainLayout title="Portafolio: Francisco - Home" activePage= "home">
-<section class="bg-[#081710]">
+<section class="load bg-[#081710]">
     <!-- Text/ Clip art - Hero Section -->
     <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
         <div class="grid grid-cols-2 gap-4 ">
