--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,4 +1,5 @@
 ---
+
 /**
  * MainLayout 
  * Wrapper layout with all meta data for pages.
@@ -37,6 +38,7 @@ if(activePage === "home") {
 	contactCSS = navCSS;
 	resumeCSS = activeNavCss;
 }
+
 ---
 <html lang="en">
 	<head>
@@ -48,7 +50,7 @@ if(activePage === "home") {
 	</head>
 	<body class="bg-[#081710] text-white">   
 		<nav class="bg-[#081710] border-gray-200 px-2 sm:px-4 py-2.5 rounded">
-			<div class="container flex flex-wrap items-center justify-end mx-auto">
+			<div  class="container flex flex-wrap items-center justify-end mx-auto">
 				<!-- Hamburger Menu -->
 				<button id="nav_btn" data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
 					<span class="sr-only">Open main menu</span>
@@ -94,7 +96,6 @@ if(activePage === "home") {
         <slot/>
 	</body>
 </html>
-
 <script>
 	/**
 	 * Hambuergur Menu Logic for Mobile menu
@@ -106,3 +107,23 @@ if(activePage === "home") {
 		menu.classList.toggle('scale-y-100');
 	});
 </script>
+<style is:global>
+	.load {
+  animation-duration: 1s;
+  animation-name: slidein;
+  animation-direction: alternate;
+}
+
+@keyframes slidein {
+  from {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+</style>
