--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import MainLayout from "../layouts/MainLayout.astro";
 
 ---
 <MainLayout title="Portafolio: Francisco - About" activePage= "about">
-    <section class="bg-white dark:bg-gray-900">
+    <section class="load bg-[#081710]">
         <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
             <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl dark:text-white">
                 Welcome to my portafolio website
