--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,12 +4,13 @@
  */
 import MainLayout from "../layouts/MainLayout.astro";
 import charMobile from '../images/char_mobile.png'
+import charMobile_full from '../images/char_original.png'
 //NOTE: JS here is treated like server side pre render
 ---
 <MainLayout title="Portafolio: Francisco - Home" activePage= "home">
 <section class="load bg-[#081710]">
     <!-- Text/ Clip art - Hero Section -->
-    <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
+    <div class="py-8 px-4 md:pr-4 md:pl-28 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
         <div class="grid grid-cols-2 gap-4 ">
             <div class="pt-20">
                 <h1 class="hidden w-full sm:block sm:w-auto text-5xl font-extrabold text-gray-90">
@@ -31,7 +32,8 @@ import charMobile from '../images/char_mobile.png'
                     a Web Developer
                  </h1>
             </div>
-            <img class="mx-4 w-40 md:w-40" src={charMobile}/>
+            <img class="mx-4 w-40 md:w-40 md:hidden" src={charMobile}/>
+            <img class="mx-4 w-40 md:w-40  hidden md:block" src={charMobile_full}/>
             <h1 class="col-span-2 block w-full mb-0 sm:hidden sm:w-full text-4xl text-left font-extrabold text-gray-90">
                 Francisco Paliouras
             </h1>
