improved meta data

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -43,6 +43,9 @@ if(activePage === "home") {
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<meta name="description" content="Discover the exceptional software development skills of Francisco Paliouras,
+		 showcasing a diverse portfolio of innovative projects. Explore thier commitment to excellence in every project. 
+		 Please feel free to reach out with opportunities or any other inqueries.">
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
