--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import charMobile_full from '../images/char_original.png'
         <div class="grid grid-cols-2 gap-4 ">
             <div class="pt-20">
                 <h1 class="hidden w-full sm:block sm:w-auto text-5xl font-extrabold text-gray-90">
-                Welcome,
+                Welcome
                 </h1>
                 <h1 class="hidden w-full sm:block sm:w-auto font-extrabold text-xl dark:text-white">
                     This is my portafolio website, I’m
@@ -32,8 +32,8 @@ import charMobile_full from '../images/char_original.png'
                     a Web Developer
                  </h1>
             </div>
-            <img class="mx-4 w-40 md:w-40 md:hidden" src={charMobile}/>
-            <img class="mx-4 w-40 md:w-40  hidden md:block" src={charMobile_full}/>
+            <img alt="Mobile Version of cartoon Francisco Paliouras"  class="mx-4 w-40 md:w-40 md:hidden" src={charMobile}/>
+            <img alt="Cartoon Francisco Paliouras" class="mx-4 w-40 md:w-40  hidden md:block" src={charMobile_full}/>
             <h1 class="col-span-2 block w-full mb-0 sm:hidden sm:w-full text-4xl text-left font-extrabold text-gray-90">
                 Francisco Paliouras
             </h1>
