--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -4,6 +4,8 @@
  */
 import MainLayout from "../layouts/MainLayout.astro";
 import ResumeItem from "../layouts/ResumeItem.astro";
+
+// SVG IMGS
 import resumeImgSrc from "../images/resume.jpg"
 import springSvg from '../images/tech_icons/spring-icon.svg'
 import jsSvg from '../images/tech_icons/javascript.svg'
@@ -46,11 +48,11 @@ import mongoSvg from '../images/tech_icons/mongodb-icon.svg'
                 
                 <div slot="job-icon" class="flex flex-wrap px-6 pt-4 pb-2">
                     <span class="w-f inline-block border-2 border-[#3BA576] text-[#3BA576] rounded-full px-3 py-1 text-sm font-semibold mr-2 mb-2">
-                        <img class="w-[1.2rem] inline-block" src={javaSvg}>
+                        <img alt="Java icon"  class="w-[1.2rem] inline-block" src={javaSvg}>
                        Java
                     </span>
                     <span class="w-f inline-block border-2 border-[#3BA576] text-[#3BA576] rounded-full px-3 py-1 text-sm font-semibold mr-2 mb-2">
-                        <img class="w-[1.2rem] inline-block" src={springSvg}>
+                        <img alt="Springboot icon"  class="w-[1.2rem] inline-block" src={springSvg}>
                        Spring-boot
                     </span>
                     <span class="w-f inline-block border-2 border-[#3BA576] text-[#3BA576] rounded-full px-3 py-1 text-sm font-semibold mr-2 mb-2">
@@ -58,7 +60,7 @@ import mongoSvg from '../images/tech_icons/mongodb-icon.svg'
                        JS
                     </span>
                     <span class="w-f inline-block border-2 border-[#3BA576] text-[#3BA576] rounded-full px-3 py-1 text-sm font-semibold mr-2 mb-2">
-                        <img class="w-[1.2rem] inline-block" src={koSvg}>
+                        <img alt="Knockout.js icon"  class="w-[1.2rem] inline-block" src={koSvg}>
                        Knockout.js
                     </span>    
                 </div>
@@ -87,15 +89,15 @@ import mongoSvg from '../images/tech_icons/mongodb-icon.svg'
                 
                 <div slot="job-icon" class="flex flex-wrap px-6 pt-4 pb-2">
                     <span class="w-f inline-block border-2 border-[#3BA576] text-[#3BA576] rounded-full px-3 py-1 text-sm font-semibold mr-2 mb-2">
-                        <img class="w-[1.2rem] inline-block" src={reactSvg}>
+                        <img alt="React.js icon" class="w-[1.2rem] inline-block" src={reactSvg}>
                        React
                     </span>
                     <span class="w-f inline-block border-2 border-[#3BA576] text-[#3BA576] rounded-full px-3 py-1 text-sm font-semibold mr-2 mb-2">
-                        <img class="w-[1.2rem] inline-block" src={tailwindSvg}>
+                        <img alt="TailwindCss icon"  class="w-[1.2rem] inline-block" src={tailwindSvg}>
                        TailwindCss
                     </span>
                     <span class="w-f inline-block border-2 border-[#3BA576] text-[#3BA576] rounded-full px-3 py-1 text-sm font-semibold mr-2 mb-2">
-                        <img class="w-[1.2rem] inline-block" src={jsSvg}>
+                        <img alt="Javascript icon"  class="w-[1.2rem] inline-block" src={jsSvg}>
                        JS
                     </span>   
                 </div>
@@ -123,15 +125,15 @@ import mongoSvg from '../images/tech_icons/mongodb-icon.svg'
                 
                 <div slot="job-icon" class="flex flex-wrap px-6 pt-4 pb-2">
                     <span class="w-f inline-block border-2 border-[#3BA576] text-[#3BA576] rounded-full px-3 py-1 text-sm font-semibold mr-2 mb-2">
-                        <img class="w-[1.2rem] inline-block" src={reactSvg}>
+                        <img alt="React.js icon"  class="w-[1.2rem] inline-block" src={reactSvg}>
                        React
                     </span>
                     <span class="w-f inline-block border-2 border-[#3BA576] text-[#3BA576] rounded-full px-3 py-1 text-sm font-semibold mr-2 mb-2">
-                        <img class="w-[1.2rem] inline-block" src={reduxSvg}>
+                        <img alt="Redux.js icon"  class="w-[1.2rem] inline-block" src={reduxSvg}>
                        Redux
                     </span>   
                     <span class="w-f inline-block border-2 border-[#3BA576] text-[#3BA576] rounded-full px-3 py-1 text-sm font-semibold mr-2 mb-2">
-                        <img class="w-[1.2rem] inline-block" src={semanticSvg}>
+                        <img alt="Semantic UI icon"  class="w-[1.2rem] inline-block" src={semanticSvg}>
                        Semantic-UI
                     </span>
                     
@@ -161,11 +163,11 @@ import mongoSvg from '../images/tech_icons/mongodb-icon.svg'
                 
                 <div slot="job-icon" class="flex flex-wrap px-6 pt-4 pb-2">
                     <span class="w-f inline-block border-2 border-[#3BA576] text-[#3BA576] rounded-full px-3 py-1 text-sm font-semibold mr-2 mb-2">
-                        <img class="w-[.7rem] inline-block" src={mongoSvg}>
+                        <img alt="mongoDB icon"  class="w-[.7rem] inline-block" src={mongoSvg}>
                        MongoDB
                     </span>
                     <span class="w-f inline-block border-2 border-[#3BA576] text-[#3BA576] rounded-full px-3 py-1 text-sm font-semibold mr-2 mb-2">
-                        <img class="w-[1.2rem] inline-block" src={jsSvg}>
+                        <img alt="Javascript icon"  class="w-[1.2rem] inline-block" src={jsSvg}>
                        JS
                     </span>   
                 </div>
