--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -36,6 +36,7 @@ import mongoSvg from '../images/tech_icons/mongodb-icon.svg'
             Experience
         </h1>
         <div class="mx-10 md:mx-4 md:px-4 grid md:grid-cols-3 gap-x-4 gap-y-4 ">
+            <!-- TB -->
             <ResumeItem class="">
                 <h2 slot="job-name" class="font-bold text-2xl">TotalBrokerage</h2>
                 <h2 slot="job-date" class="text-[#3BA576] font-thin">Sept 2021 - To Date</h2>
@@ -76,7 +77,7 @@ import mongoSvg from '../images/tech_icons/mongodb-icon.svg'
                     </div>
                 </div>
             </ResumeItem>
-
+            <!-- PSTABLES -->
             <ResumeItem>
                 <h2 slot="job-name" class="font-bold text-2xl">P Stables</h2>
                 <h2 slot="job-date" class="text-[#3BA576] font-thin">May 2021 - Sept 2021</h2>
@@ -113,7 +114,7 @@ import mongoSvg from '../images/tech_icons/mongodb-icon.svg'
                     </div>
                 </div>
             </ResumeItem>
-
+            <!-- PARKNER -->
             <ResumeItem>
                 <h2 slot="job-name" class="font-bold text-2xl">Parkner.pe</h2>
                 <h2 slot="job-date" class="text-[#3BA576] font-thin">July 2019 - Sept 2019</h2>
@@ -150,7 +151,7 @@ import mongoSvg from '../images/tech_icons/mongodb-icon.svg'
                     </div>
                 </div>
             </ResumeItem>
-
+            <!-- UTEC -->
             <ResumeItem>
                 <h2 slot="job-name" class="font-bold text-2xl">Universidad de Tecnologia y Ingeniería</h2>
                 <h2 slot="job-date" class="text-[#3BA576] font-thin">June 2017 - July 2017</h2>
@@ -183,7 +184,6 @@ import mongoSvg from '../images/tech_icons/mongodb-icon.svg'
                     </div>
                 </div>
             </ResumeItem>
-
         </div>      
     </section>
 </MainLayout>
