--- a/src/layouts/ResumeItem.astro
+++ b/src/layouts/ResumeItem.astro
@@ -5,7 +5,7 @@
 
 ---
 
-<div class="max-w-sm rounded overflow-hidden shadow-lg border-2 border-[#3BA576]">
+<div class="max-w-sm max-h-[90%] rounded  shadow-lg border-2 border-[#3BA576]">
     <div class="px-6 py-4">
       <div class="py-2">
         <slot name="job-name"/>
