--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import charMobile_full from '../images/char_original.png'
 <MainLayout title="Portafolio: Francisco - Home" activePage= "home">
 <section class="load bg-[#081710]">
     <!-- Text/ Clip art - Hero Section -->
-    <div class="py-8 px-4 md:pr-4 md:pl-28 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
+    <div class="mx-auto max-w-screen-xl text-center pt-14 pl-10 md:pl-48 lg:pl-80 pr-10 md:pr-10">
         <div class="grid grid-cols-2 gap-4 ">
             <div class="pt-20">
                 <h1 class="hidden w-full sm:block sm:w-auto text-5xl font-extrabold text-gray-90">
