--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,7 +4,7 @@ import dogImage from '../images/404-dog.png';
 <body class="bg-[#081710] text-white"> 
     <div class="h-screen justify-center">
         <center class="mt-24 m-auto">
-            <img class="w-80" src={dogImage}>
+            <img class="w-80 animate-bounce-slow" src={dogImage}>
             <div class=" tracking-widest mt-4">
                 <span class="text-4xl block"><span>4  0  4</span></span>
                 <span class="text-xl px-4">Sorry, We couldn't find what you are looking for! Heres a corgi in a space suit to cheer you up :)</span>
