--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,14 +4,14 @@ import dogImage from '../images/404-dog.png';
 <body class="bg-[#081710] text-white"> 
     <div class="h-screen justify-center">
         <center class="mt-24 m-auto">
-            <img class="w-80 animate-bounce-slow" src={dogImage}>
+            <img class="md:w-80 w-[100%] animate-bounce-slow" src={dogImage}>
             <div class=" tracking-widest mt-4">
-                <span class="text-4xl block"><span>4  0  4</span></span>
-                <span class="text-xl px-4">Sorry, We couldn't find what you are looking for! Heres a corgi in a space suit to cheer you up :)</span>
+                <span class="md:text-8xl text-4xl font-bold block"><span>4  0  4</span></span>
+                <span class="md:text-4xl text-3xl px-4">Sorry, We couldn't find what you are looking for! Heres a corgi in a space suit to cheer you up :)</span>
             </div>
             </center>
             <center class="mt-6">
-            <a href="/" class="flex rounded border-2 border-[#3BA576] text-[#3BA576] hover:text-black hover:bg-[#3BA576] overflow-hidden w-fit px-8 py-4 my-4">Go back </a>
+            <a href="/" class="flex rounded border-2 border-[#3BA576] text-[#3BA576] hover:text-black hover:bg-[#3BA576] overflow-hidden w-fit px-8 py-4 my-4 md:text-sm text-7xl">Go back </a>
         </center>
     </div>
 </body>
